Changes in the header

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="page_header">
 
             <nav>
-                <div class="logo"><a href="#"><img src="image/logo.svg" alt="logo"></a></div>
+                <div class="logo"><a href="#"><img src="image/logo1.svg" alt="logo"></a></div>
 
                 <div class="dropdown item-menu">
                     <a href="">Product</a>
