--- a/index.html
+++ b/index.html
@@ -78,6 +78,23 @@
 
         </div>
     </header>
+    <main>
+        <div class="page1">
+            <div class="container">
+                <h1>Ускорьте локализацию от кода до доставки</h1>
+                <p>Платформа управления локализацией и переводом для гибких команд. Воспользуйтесь автоматизацией, прозрачностью рабочего процесса и быстрой реализацией проектов.</p>
+                <div class="btn">
+                    
+                    <span class="orange"><a href="#">Try it free</a></span>
+                    <span class="white"><a href="#">Book a demo</a></span>
+                                
+                </div>
+                <p class="text_min">Попробуйте все функции в течение 14 дней · Кредитная карта не требуется</p>
+
+            </div>
+            <div class="img"><img src="image/page1-img.svg" alt="image"></div>
+        </div>
+    </main>
 
 
 </body>
