--- a/index.html
+++ b/index.html
@@ -92,9 +92,12 @@
                 <p class="text_min">Попробуйте все функции в течение 14 дней · Кредитная карта не требуется</p>
 
             </div>
-            <div class="img"><img src="image/page1-img.svg" alt="image"></div>
+            <div class="img_page1"><img src="image/page1-img.svg" alt="image"></div>
         </div>
     </main>
+    <footer>
+        
+    </footer>
 
 
 </body>
