--- a/index.html
+++ b/index.html
@@ -94,9 +94,12 @@
             </div>
             <div class="img_page1"><img src="image/page1-img.svg" alt="image"></div>
         </div>
+        <div class="page2">
+            
+        </div>
     </main>
     <footer>
-        
+
     </footer>
 
 
