--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
     <!--  -->
     <header>
-        <div class="page_header">
+        <div class="page page_header">
 
             <nav>
                 <div class="logo"><a href="#"><img src="image/logo1.svg" alt="logo"></a></div>
@@ -79,7 +79,7 @@
         </div>
     </header>
     <main>
-        <div class="page1">
+        <div class="page page1">
             <div class="container">
                 <h1>Ускорьте локализацию от кода до доставки</h1>
                 <p>Платформа управления локализацией и переводом для гибких команд. Воспользуйтесь автоматизацией, прозрачностью рабочего процесса и быстрой реализацией проектов.</p>
