--- a/index.html
+++ b/index.html
@@ -97,6 +97,9 @@
         <div class="page2">
             
         </div>
+        <div class="page3">
+            
+        </div>
     </main>
     <footer>
 
