--- a/index.html
+++ b/index.html
@@ -16,6 +16,15 @@
 </head>
 
 <body>
+    <header>
+
+    </header>
+    <main>
+
+    </main>
+    <footer>
+        
+    </footer>
    
 
 </body>
